# cpp-audio-reader

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FFTW.cmake  PortAudio.cmake
include/: audio.hpp
include/base/: combinedModule.hpp  input.hpp  inputModule.hpp  inputOutput.hpp  module.hpp  moduleData.hpp  moduleInput.hpp  moduleOutput.hpp  output.hpp  outputModule.hpp
include/modules/audio/: audio.hpp
include/modules/test/: increment.hpp  log.hpp  sum.hpp
src/: audio.cpp  audioMain.cpp  main.cpp  testMain.cpp
src/base/: input.cpp  module.cpp  output.cpp
src/modules/audio/: audio.cpp
src/modules/test/: increment.cpp  log.cpp  sum.cpp
